Fixed word-wrap

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -156,6 +156,7 @@ td > pre {
   font-family: verdana, arial, helvetica, sans-serif;
   border: none;
   background-color: inherit;
+  white-space: pre-wrap;
 }
 
 @media print {
